add: search endpoint
